--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A project just to demo how a code review might go down",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint --fix 'lib/**/*.js' 'tests/**/*.js'",
     "test": "tap 'tests/**/*.js' --cov"
   },
   "author": {
@@ -12,6 +13,9 @@
   },
   "license": "CC0-1.0",
   "dependencies": {
+    "eslint": "^4.0.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.6.0",
     "tap": "^10.5.2"
   }
 }
