--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A project just to demo how a code review might go down",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --fix 'lib/**/*.js' 'tests/**/*.js'",
+    "lint": "eslint 'lib/**/*.js' 'tests/**/*.js'",
     "test": "tap 'tests/**/*.js' --cov"
   },
   "author": {
@@ -16,6 +16,7 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.6.0",
+    "mockdate": "^2.0.1",
     "tap": "^10.5.2"
   }
 }
